--- a/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
+++ b/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
@@ -63,8 +63,9 @@
     font-size: $body;
     font-weight: 400;
     color: $blue;
-    text-decoration: underline;
+    text-decoration: none;
     margin: 0;
+    padding: 0;
   }
 
   p {
@@ -150,4 +151,18 @@
       margin-bottom: 8px;
     }
   }
+}
+
+p.address {
+  margin-top: 0;
+  text-decoration: none;
+}
+
+a.address:visited {
+  margin-top: 0;
+  text-decoration: none;
+}
+
+label {
+  font-weight: 800;
 }
