--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,8 +7,19 @@
 {% block pageIntro %}These is the design work for the Connecting to a GP digital service{% endblock%}
 
 {% block content %}
+<h2>v3</h2>
+<h3>Find and see a GP journey</h3>
+Looking at user seeing/choosing an appointment.
+<ul>
+<!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
+  <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
+  <li><a href="/v3/">List of conditions</a> </li>
+</ul>
+
+
 <h2>v2</h2>
 <h3>Find and see a GP journey</h3>
+This is the very basic route: Users can 'find' a GP, and then see a page that tells them how to make an appointment.
 <ul>
 <!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
   <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
