--- a/app/views/v3/confirm-online-appointment.html
+++ b/app/views/v3/confirm-online-appointment.html
@@ -7,7 +7,7 @@ GP details NHS.UK
 
 
 {% block pageTitle %}
-Review and confirm an appointment at Meanwood Group Practice
+Book appointment at Meanwood Group Practice
 {% endblock %}
 
 {% block pageIntro %}
@@ -22,7 +22,7 @@ Review and confirm an appointment at Meanwood Group Practice
 
 <p class="info-panel">Seeing Dr Angela Carter at 10.10am today</p>
 
-<h2 style="margin-bottom:32px;">Your details</h2>
+<h2 style="margin-bottom:32px;">To book the appontment provide your details</h2>
 
 <form>
 
@@ -73,7 +73,8 @@ Review and confirm an appointment at Meanwood Group Practice
 
 </form>
 
-<p><a href="appointment-confirmation" class="button">Continue</a></p>
+
+<p><a href="review-appointment" class="button">Confirm and book appointment</a></p>
 
 
 <a href="see-online-appointments" class="link-back" style="margin: 0;">Back</a>
