--- a/app/views/v3/book-an-appointment.html
+++ b/app/views/v3/book-an-appointment.html
@@ -7,7 +7,7 @@ Book an appointment - NHS.UK
 
 
 {% block pageTitle %}
-Book an appointment with a GP
+Find a GP practice
 {% endblock %}
 
 {% block pageIntro %}
