--- a/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
+++ b/app/assets/sass/modules/gp-lookup/_gp-lookup.scss
@@ -77,6 +77,7 @@
     }
   }
 
+
   .distance {
     font-size: 14px;
     @include media(large) {
@@ -164,5 +165,9 @@ a.address:visited {
 }
 
 label {
-  font-weight: 800;
+  font-weight: 600;
+}
+
+.-back {
+  text-align: left;
 }
