--- a/app/views/v2/gp-details.html
+++ b/app/views/v2/gp-details.html
@@ -11,6 +11,49 @@ Book an appointment at Meanwood Group Practice
 {% endblock %}
 
 {% block pageIntro %}
+<nav role="navigation" aria-label="Parts to this guide" class="link-list__row">
+
+
+
+ <ol class="link-list  link-list--one-half link-list--numbered" start="1">
+
+
+
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="getting-diagnosed"
+            class="link_reverse-polarity"
+            title="Part 2: Getting diagnosed"
+            data-analytics="contents-navigation"
+            data-step="2">
+           Contact reception
+         </a>
+
+     </li>
+
+
+
+
+     <li class="link-list--item">
+
+         <a href="understanding-medication"
+            class="link_reverse-polarity"
+            title="Part 3: Understanding medication"
+            data-analytics="contents-navigation"
+            data-step="3">
+           Book an appointment online
+         </a>
+
+     </li>
+
+ </ol>
+
+ </nav>
+
 
 {% endblock %}
 
