Get test results

--- a/app/views/v3/see-online-appointments.html
+++ b/app/views/v3/see-online-appointments.html
@@ -100,7 +100,7 @@ Choose an appointment at Meanwood Group Practice
 <p><a href-="">Choose an appointment on another day</a></p>
 
 
-<a href="gp-details" class="link-back" style="margin: 0;">Back</a>
+<p><a href="gp-details" class="link-back" style="margin: 0;">Back</a>
 </p>
 
 
