--- a/app/views/v2_1/gp-details.html
+++ b/app/views/v2_1/gp-details.html
@@ -2,18 +2,18 @@
 
 
 {% block page_title %}
-GP details NHS.UK
+Book a GP appointment at Meanwood Group Practice
 {% endblock %}
 
 
 {% block pageTitle %}
-Book an appointment at Meanwood Group Practice
+Book a GP appointment at Meanwood Group Practice
 {% endblock %}
 
 {% block pageIntro %}
 <nav role="navigation" aria-label="Parts to this guide" class="link-list__row">
 
- <ol class="link-list  link-list--one-half link-list--numbered" start="1">
+ <ul class="link-list  link-list--one-half link-list--numbered" start="1">
 
      <li class="link-list--item">
 
@@ -51,15 +51,53 @@ Book an appointment at Meanwood Group Practice
 
 <a name="reception"></a><h2>Contact reception</h2>
 
+
+<b>Book an appointment</b><br />
+Contact reception:  0113 230 5055</p>
+
 <p><b>Reception opening hours</b><br />
-Open from 7.30am to 8pm today
+Reception is open from 7.30am to 8pm
 </p>
 
 <details style="margin-top: 0;margin-bottom: 0;">
 
-<summary><span class="nearest_opening_times">View all opening times</span></summary>
+<summary><span class="nearest_opening_times">See all opening times</span></summary>
 
   <div class="panel panel-border-narrow">
+
+
+    <table class="gpOpeningTimes">
+        <tbody>
+            <tr>
+                <td>Monday</td>
+                <td>7.30am to 8pm</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>8am to 6pm</td>
+            </tr>
+            <tr>
+                <td>Wednesday</td>
+                <td>7.30am to 6pm</td>
+            </tr>
+            <tr>
+                <td>Thursday</td>
+                <td>8am to 6pm</td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>8am to 6pm</td>
+            </tr>
+        </tbody>
+    </table>
+
+  </div>
+
+</details>
+
+<p><b>GP appointment times</b><br />
+Reception is open from 7.30am to 8pm
+</p>
 
 
     <table class="gpOpeningTimes">
@@ -75,7 +113,6 @@ Open from 7.30am to 8pm today
             <tr>
                 <td>Wednesday</td>
                 <td>7.30am to 6pm</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Thursday</td>
@@ -85,33 +122,33 @@ Open from 7.30am to 8pm today
                 <td>Friday</td>
                 <td>7.30am to 6pm</td>
             </tr>
-            <tr>
-                <td>Saturday</td>
-                <td>Closed - call 111 if you need help</td>
-            </tr>
-            <tr>
-                <td>Sunday</td>
-                <td>Closed - call 111 if you need help</td>
-            </tr>
         </tbody>
     </table>
 
-  </div>
 
-</details>
+<p>You can also ask for a late appointment between 6pm and 8pm on Wednesdays and Thursdays.</p>
 
-<p class="muted">Telephone:  0113 230 5055</p>
+<p>The surgery has telephone appointments available, Monday to Friday up to 11am.</p>
+
+<p>You can book an appointment up to 4 weeks in advance.</p>
 
 
 <a name="online"></a><h2 style="margin-top:32px;">Book an appointment online</h2>
 
-<p>To book an appointment online, you need to register with the practice’s online services website.</p>
+<p>You can book an appointment online if:</p>
 
-<p>You can get a registration form from reception.</p>
+<ul>
+  <li>you’re a registered patient with this practice</li>
+  <li>you have a username and password for this surgery’s online services website </li>
+</ul>
 
-<p>The practice will send you a username and password for the site.</p>
+
+<p>If you don’t have a username and password, ask reception for a form to register for online services.</p>
 
 <p class="muted"><a href="https://patient.emisaccess.co.uk/Account/Login" style="margin-bottom: 0px;">Sign into the online services website</a>
+</p>
+
+<p><a href="book-an-appointment" class="link-back" style="margin: 0;">Find your GP</a>
 </p>
 
 
