Get test results

--- a/app/views/v2_1/get-test-results.html
+++ b/app/views/v2_1/get-test-results.html
@@ -105,7 +105,7 @@ Get test results from Meanwood Group Practice
 
 <p class="muted">01234 5678901 open now</p>
 
-<a name="onphone"></a><h2>Get test results on the phone</h2>
+<a name="online"></a><h2>Get test results online</h2>
 
 <p>The online test results service doesn’t tell you the exact results of your test. It tells you whether the GP would like to see you to talk about your results.</p>
 
