--- a/app/views/v2_1/gp-details.html
+++ b/app/views/v2_1/gp-details.html
@@ -95,9 +95,7 @@ Reception is open from 7.30am to 8pm
 
 </details>
 
-<p><b>GP appointment times</b><br />
-Reception is open from 7.30am to 8pm
-</p>
+<p><b>GP appointment times</b></p>
 
 
     <table class="gpOpeningTimes">
