v2_1 GP results page content changes

--- a/app/views/v2_1/gp-details.html
+++ b/app/views/v2_1/gp-details.html
@@ -97,6 +97,8 @@ Reception is open from 7.30am to 8pm
 
 <p><b>GP appointment times</b></p>
 
+<p>You can book an appointment up to 4 weeks in advance.</p>
+
 
     <table class="gpOpeningTimes">
         <tbody>
@@ -126,9 +128,8 @@ Reception is open from 7.30am to 8pm
 
 <p>You can also ask for a late appointment between 6pm and 8pm on Wednesdays and Thursdays.</p>
 
-<p>The surgery has telephone appointments available, Monday to Friday up to 11am.</p>
+<p>The surgery has telephone appointments available, Monday to Friday 7.30am to 9am.</p>
 
-<p>You can book an appointment up to 4 weeks in advance.</p>
 
 
 <a name="online"></a><h2 style="margin-top:32px;">Book an appointment online</h2>
