v2_1 GP results page content changes

--- a/app/views/v2_1/gp-details.html
+++ b/app/views/v2_1/gp-details.html
@@ -52,7 +52,7 @@ Book a GP appointment at Meanwood Group Practice
 <a name="reception"></a><h2>Contact reception</h2>
 
 
-<b>Book an appointment</b><br />
+<p><b>Book an appointment</b><br />
 Contact reception:  0113 230 5055</p>
 
 <p><b>Reception opening hours</b><br />
@@ -95,9 +95,8 @@ Reception is open from 7.30am to 8pm
 
 </details>
 
-<p><b>GP appointment times</b></p>
-
-<p>You can book an appointment up to 4 weeks in advance.</p>
+<p><b>GP appointment times</b><br />
+  You can book an appointment up to 4 weeks in advance.</p>
 
 
     <table class="gpOpeningTimes">
