v2_1 repeat prescriptions page

--- a/app/views/v2_1/get-test-results.html
+++ b/app/views/v2_1/get-test-results.html
@@ -2,7 +2,7 @@
 
 
 {% block page_title %}
-Book a GP appointment at Meanwood Group Practice
+Get test results from Meanwood Group Practice
 {% endblock %}
 
 
