--- a/app/views/v2_1/get-test-results.html
+++ b/app/views/v2_1/get-test-results.html
@@ -116,7 +116,7 @@ Get test results from Meanwood Group Practice
 <p><a href="https://patient.emisaccess.co.uk/Account/Login" class="button" style="margin-bottom: 0px;">Sign into the online services website</a>
 </p>
 
-<p><a href="javascript:history.back" class="link-back" style="margin: 0;">Do we need a back link here, Dean?</a>
+<p><a href="javascript:history.back" class="link-back" style="margin: 0;">Back to GP practice information</a>
 </p>
 
 
