update the surgery info

--- a/app/views/v2_1/get-test-results.html
+++ b/app/views/v2_1/get-test-results.html
@@ -19,7 +19,7 @@ Get test results from {{ practiceName }}
 
          <a href="#askfor"
             class="link_reverse-polarity"
-            title="Contact reception"
+            title="Test results you can ask for"
             data-analytics="contents-navigation"
             data-step="1">
             Test results you can ask for
@@ -31,7 +31,7 @@ Get test results from {{ practiceName }}
 
          <a href="#before"
             class="link_reverse-polarity"
-            title="Book an appointment online"
+            title="Before you ask for results"
             data-analytics="contents-navigation"
             data-step="2">
             Before you ask for results
@@ -44,7 +44,7 @@ Get test results from {{ practiceName }}
 
          <a href="#onphone"
             class="link_reverse-polarity"
-            title="Book an appointment online"
+            title="Get test results on the phone"
             data-analytics="contents-navigation"
             data-step="3">
             Get test results on the phone
@@ -56,7 +56,7 @@ Get test results from {{ practiceName }}
 
          <a href="#online"
             class="link_reverse-polarity"
-            title="Book an appointment online"
+            title="Get test results online"
             data-analytics="contents-navigation"
             data-step="4">
             Get test results online
