--- a/app/views/v2_1/repeat-prescription.html
+++ b/app/views/v2_1/repeat-prescription.html
@@ -19,7 +19,7 @@ Get a repeat prescription from {{ practiceName }}
 
          <a href="#who"
             class="link_reverse-polarity"
-            title="Contact reception"
+            title="Who can order a repeat prescription"
             data-analytics="contents-navigation"
             data-step="1">
             Who can order a repeat prescription
@@ -31,7 +31,7 @@ Get a repeat prescription from {{ practiceName }}
 
          <a href="#contact"
             class="link_reverse-polarity"
-            title="Book an appointment online"
+            title="Contact reception"
             data-analytics="contents-navigation"
             data-step="2">
             Contact reception
@@ -44,7 +44,7 @@ Get a repeat prescription from {{ practiceName }}
 
          <a href="#register"
             class="link_reverse-polarity"
-            title="Book an appointment online"
+            title="Register for the electronic prescription service"
             data-analytics="contents-navigation"
             data-step="3">
             Register for the electronic prescription service
