--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
 
 <h3>MVP for Book an Appointment with a GP</h3>
 <ul>
-  <li><a href="/mvp_v1/">Index</a> </li>
+  <li><a href="/MVP_v1/">Index</a> </li>
 </ul>
 
 {% endblock %}
