--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,13 @@
 
 <h2>Production candidates</h2>
 
-<h3>MVP for Book an Appointment with a GP</h3>
+<h3>MVP for Book an Appointment with a GP v1.1</h3>
+<ul>
+  <li><a href="/MVP_v1_1/">Index</a> </li>
+</ul>
+
+
+<h3>MVP for Book an Appointment with a GP v1</h3>
 <ul>
   <li><a href="/MVP_v1/">Index</a> </li>
 </ul>
