--- a/app/views/MVP_v1_1/gp-details.html
+++ b/app/views/MVP_v1_1/gp-details.html
@@ -45,7 +45,7 @@ Book a GP appointment at {{ practiceName }}
 
      <li class="link-list--item">
 
-         <a href="wheensee"
+         <a href="#whensee"
             class="link_reverse-polarity"
             title="Book an appointment online"
             data-analytics="contents-navigation"
