Changes for lab - index page and spacing on book GP appt page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,6 +29,18 @@
 
 <h2>Exploration</h2>
 
+<h3>Lab on Monday 6 March 2017</h3>
+<h4>Book a GP appointment journey</h4>
+Looking at user seeing/choosing an appointment, dovetails into fake SystmOnline version.
+<ul>
+<!--    <li><a href="/v1/content_page_2-3">Standard content page, two-third grid</a></li>
+  <li><a href="/v1/content_page_2-3_1-3">Standard content page, two-third/one-third grid</a></li>-->
+  <li><a href="/lab_06_03_2017/diabetes">Start on a symptoms/condfitions page (diabetes) page</a> </li>
+  <li><a href="/lab_06_03_2017/book-an-appointment">Start on Book an appointment with your GP start page</a> </li>
+</ul>
+
+
+
 <h3>v3</h3>
 <h4>Find and see a GP journey</h4>
 Looking at user seeing/choosing an appointment.
