--- a/app/views/lab_06_03_2017/book-an-appointment.html
+++ b/app/views/lab_06_03_2017/book-an-appointment.html
@@ -22,6 +22,9 @@ Book an appointment with your GP
 
 <p>Before you start you'll need the name of your GP surgery.</p>
 
+
+
+
 <p>If you want to book online you'll need a username and password for your surgery's online services website.</p>
 
 
@@ -36,11 +39,10 @@ Book an appointment with your GP
 
 <a href="http://dev.c2s.nhschoices.net/book-a-gp-appointment/" class="button">Start</a>
 
-<p>&nbsp;</p>
 
-
-<p><b>If you don't have a GP</b><br />
+<p style="padding-top: 16px;"><b>If you don't have a GP</b><br />
   <a href="http://www.nhs.uk/Service-Search/GP/LocationSearch/4">Search for a new GP</a> and <a href="http://www.nhs.uk/NHSEngland/AboutNHSservices/doctors/Pages/NHSGPs.aspx">become a permanent or temporary patient</a>.</p>
+
 
 
 
