--- a/app/assets/sass/modules/callouts/_callouts.scss
+++ b/app/assets/sass/modules/callouts/_callouts.scss
@@ -19,7 +19,7 @@
 
 .info-panel {
   border-left: solid 6px $dark-blue2;
-  padding: 0 $leading*2;
+  padding: 0 $leading;
   margin-bottom: $leading;
 }
 
