--- a/app/assets/sass/modules/callouts/_callouts.scss
+++ b/app/assets/sass/modules/callouts/_callouts.scss
@@ -25,7 +25,7 @@
 
 .muted {
   background-color: #d9e1e2;
-  padding: $leading $leading $leading $leading*2;
+  padding: $leading*0.5 $leading $leading*0.5 $leading*2;
   border-left: solid 6px $black;
   margin-bottom: 32px;
 
