--- a/app/views/expl_v5/book-an-appointment-alt3.html
+++ b/app/views/expl_v5/book-an-appointment-alt3.html
@@ -17,7 +17,7 @@ Book a GP appointment online
 
 {% block content %}
 
-<div class="info-panel">You can only search for surgeries in England.</div>
+<!-- <div class="info-panel">You can only search for surgeries in England.</div>-->
 
 
 <p>To book online you need to be registered with your GP's online services.</p>
@@ -25,11 +25,11 @@ Book a GP appointment online
 
 <details style="margin-top: 16px; margin-bottom: 32px;">
 
-<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">Not sure if you are registered to use your GP surgery's online services?</span></summary>
+<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">Are you registered to use your GP surgery's online services?</span></summary>
 
-<div class="muted">
-  <p>To use your GP surgery's online services they will have given you a username and password.</p>
-  <p>If you don't have these contact your GP surgery's reception.</p>
+<div class="info-panel">
+  <p>To use your GP surgery's online services you will have been a username and password to access their services.</p>
+  <p>If you don't have a username and password contact your GP surgery's reception.</p>
 </div>
 
 </details>
