--- a/app/views/expl_v5/diabetes.html
+++ b/app/views/expl_v5/diabetes.html
@@ -165,7 +165,7 @@ your GP surgery.</p>
 <p>The earlier diabetes is diagnosed and treatment starts, the better. Treating
 diabetes early reduces your risk of <a href="health-problems">other health problems.</a></p>
 
-<div class="muted"><a href="book-an-appointment?serviceprovider=GP">Book an appointment with a GP</a></div>
+<div class="muted"><a href="book-an-appointment?serviceprovider=GP">Book an appointment with a GP online</a></div>
 
 
 
