--- a/app/views/expl_v5/book-an-appointment-alt3.html
+++ b/app/views/expl_v5/book-an-appointment-alt3.html
@@ -42,7 +42,7 @@ Book a GP appointment online
 What's the name of your GP surgery?
 </legend>
   <div class="form-group">
-    <input type="text" size="30" name="postcode">
+    <input type="text" size="30" name="postcode"  style="margin-bottom: 0;">
   </div>
 </fieldset>
 
