--- a/app/views/expl_v5/book-an-appointment.html
+++ b/app/views/expl_v5/book-an-appointment.html
@@ -26,9 +26,9 @@ Book a GP appointment online
 
 <form action="show-list-of-pharmacies-with-full-times-v3-2">
 
-<fieldset>
-  <div class="form-group">
-    <input type="text" size="30" name="postcode">
+<fieldset style="padding-bottom: 0;">
+  <div class="form-group" style="padding-bottom: 0;">
+    <input type="text" size="30" name="postcode" style="margin-top: 0; margin-bottom: 0;">
   </div>
 </fieldset>
 
