--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,6 +29,43 @@
 
 <h2>Exploration</h2>
 
+<h3>v6</h3>
+<h4>Reference for the A/B testing</h4>
+
+<ul>
+  <li><a href="/expl_v6/book-an-appointment-v1">Book a GP appointment: v1</a></li>
+  <li><a href="/expl_v6/book-an-appointment-v2">Book a GP appointment: v2</a></li>
+</ul>
+
+
+<h3>v5</h3>
+<h4>Exploration of the Tell Us The Name Of Your GP screen</h4>
+
+<ul>
+  <li><a href="/expl_v5/">Symptoms/condition page: Diabetes</a></li>
+  <li><a href="/expl_v5/book-an-appointment">Book a GP appointment: v1</a></li>
+  <li><a href="/expl_v5/book-an-appointment-alt">Book a GP appointment: v2</a></li>
+  <li><a href="/expl_v5/book-an-appointment-alt2">Book a GP appointment: v3</a></li>
+  <li><a href="/expl_v5/book-an-appointment-alt3">Book a GP appointment: v4</a></li>
+  <li><a href="/expl_v5/book-an-appointment-alt4">Book a GP appointment: v5</a></li>
+</ul>
+
+<ul>
+  <li><a href="/expl_v5/show-list-of-a-gp">Show a GP</a></li>
+  <li><a href="/expl_v5/show-list-of-gps">Show some GPs</a></li>
+</ul>
+
+
+<h3>v4</h3>
+<h4>Why did I do this version?</h4>
+I know I am getting old, but...
+<ul>
+  <li><a href="expl_v4/review-appointment">Review appointment</a></li>
+  <li><a href="/expl_v4/appointment-confirmation">Appointment confirmation</a> </li>
+</ul>
+
+
+
 <h3>Lab on Monday 6 March 2017</h3>
 <h4>Book a GP appointment journey</h4>
 Looking at user seeing/choosing an appointment, dovetails into fake SystmOnline version.
