--- a/app/views/expl_v6/book-an-appointment-v1.html
+++ b/app/views/expl_v6/book-an-appointment-v1.html
@@ -43,7 +43,7 @@ Book a GP appointment online
   </div>
 </fieldset>
 
-<a href="show-list-of-gps" type="submit" class="button" style="margin-top: -32px; margin-bottom: 0;">Next</a>
+<a href="book-an-appointment-no-text-v3" type="submit" class="button" style="margin-top: -32px; margin-bottom: 0;">Next</a>
 
 </form>
 
