--- a/app/views/expl_v6/book-an-appointment-v2.html
+++ b/app/views/expl_v6/book-an-appointment-v2.html
@@ -49,7 +49,7 @@ What's your GP surgery's name?
   </div>
 </fieldset>
 
-<a href="show-list-of-gps" type="submit" class="button" style="margin-top: -32px; margin-bottom: 32px;">Next</a>
+<a href="book-an-appointment-no-text-v4" type="submit" class="button" style="margin-top: -32px; margin-bottom: 32px;">Next</a>
 
 </form>
 
