--- a/app/assets/sass/modules/callouts/_callouts.scss
+++ b/app/assets/sass/modules/callouts/_callouts.scss
@@ -48,3 +48,10 @@
   border-top: solid 4px #c41d00;
   margin-bottom: 32px;
 }
+
+.warning-yellow {
+  background-color: #fada88;
+  padding: $leading $leading*2 $leading $leading*2;
+  border-top: solid 4px #ffb81c;
+  margin-bottom: 32px;
+}
