--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -77,7 +77,7 @@ $visited-link-colour-on-blue: #D4EFFF; /*#5CAEED; /* #0AC0FC; E2EEFB */
 // Strip colours
 
 $feedback-alert-strip: #FFE799;
-$service-alert-primary: $yellow2;
+$service-alert-primary: #fada88;
 $service-alert-secondary: $dark-blue;
 $callout-background: $yellow2;
 $callout-border: $yellow-dark;
