--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -724,7 +724,7 @@ input[type='tel'] {
   width: 100%;
   margin: 16px 0 32px 0;
   padding: 8px;
-  border: 2px solid #0072c6;
+  border: 3px solid #0072c6;
   font-family: inherit;
   font-size: inherit;
   font-weight: 400;
@@ -1240,6 +1240,13 @@ label {
   background-color: #fada88;
   padding: 16px 32px 16px 32px;
   border-top: solid 4px #ffb81c;
+  margin-bottom: 32px;
+}
+
+.warning-against-form {
+  background-color: #f8e9e6;
+  padding: 16px 16px 4px 32px;
+  border-left: solid 4px #c41d00;
   margin-bottom: 32px;
 }
 
