--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,6 +29,14 @@
 
 <h2>Exploration</h2>
 
+<h3>v7</h3>
+<h4>Refined, simplified journey</h4>
+
+<ul>
+  <li><a href="/expl_v7/book-an-appointment">Book a GP appointment</a></li>
+</ul>
+
+
 <h3>v6</h3>
 <h4>Reference for the A/B testing</h4>
 
