--- a/app/views/expl_v7/book-an-appointment-no-results.html
+++ b/app/views/expl_v7/book-an-appointment-no-results.html
@@ -30,7 +30,7 @@ We can't find a surgery matching "searchterm"
 
 <fieldset>
 <legend style="font-weight: 600;">
-What's your GP surgery's name?
+What's the name of your GP surgery?
 </legend>
   <div class="form-group">
     <input type="text" size="30" name="postcode" style="margin-bottom: 0; border:4px solid #000000;">
