--- a/app/views/expl_v7/book-an-appointment.html
+++ b/app/views/expl_v7/book-an-appointment.html
@@ -37,7 +37,7 @@ Book a GP appointment online
 
 <form action="">
 
-<fieldset>
+<fieldset style="margin-top: 48px;">
 <legend style="font-weight: 600;">
   What's the name of your GP surgery?
 </legend>
