--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1207,8 +1207,8 @@ label {
 }
 
 .info-panel {
-  border-left: solid 8px #006BBD;
-  padding: 0 16px;
+  border-left: solid 5px #006BBD;
+  padding: 0 24px;
   margin-bottom: 16px;
 }
 
@@ -1246,7 +1246,20 @@ label {
 .warning-against-form {
   background-color: #f8e9e6;
   padding: 16px 16px 4px 32px;
-  border-left: solid 8px #c41d00;
+  border-left: solid 5px #c41d00;
+  margin-bottom: 32px;
+}
+
+.warning-against-form-no-bg {
+  padding: 0 0 0 16px;
+  border-left: solid 5px #c41d00;
+  margin-bottom: 32px;
+}
+
+.form-warning {
+  background-color: #f8e9e6;
+  padding: 16px 32px 16px 32px;
+  border-top: solid 4px #c41d00;
   margin-bottom: 32px;
 }
 
