--- a/app/views/expl_v7/book-an-appointment-no-text-entered-v1.html
+++ b/app/views/expl_v7/book-an-appointment-no-text-entered-v1.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout_2-3_no_title_block.html' %}
+{% extends '_layouts/layout_2-3_no_title_block_with_2_3_warning.html' %}
 
 
 {% block page_title %}
@@ -14,22 +14,28 @@ Book a GP appointment online
 
 {% endblock %}
 
+{% block pageWarning %}
+<p class="form-warning" tabindex="-1" style="font-weight: 600;">You need to enter your surgery name</p>
+
+{% endblock %}
+
 
 {% block content %}
 
-<p class="warning" style="font-weight: 600;">You need to enter your surgery name</p>
 
 
 <form action="">
 
+<div class="warning-against-form-no-bg">
 <fieldset>
-<legend style="font-weight: 600;">
-What's your GP surgery's name?
+<legend>
+<span class="form-label-bold" style="font-weight: 600; display:block;">What's the name of your GP surgery?</span>
 </legend>
   <div class="form-group">
     <input type="text" size="30" name="postcode" style="margin-bottom: 0; border:4px solid #ca3313;">
   </div>
 </fieldset>
+</div>
 
 <a href="book-an-appointment-no-results" type="submit" class="button" style="margin-top: 0; margin-bottom: 32px;">Next</a>
 
