--- a/app/views/expl_v7/book-an-appointment-no-text-entered-v3.html
+++ b/app/views/expl_v7/book-an-appointment-no-text-entered-v3.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout_2-3_no_title_block_with_2_3_warning.html' %}
+{% extends '_layouts/layout_2-3_no_title_block_with_3_3_warning.html' %}
 
 
 {% block page_title %}
@@ -33,7 +33,7 @@ Book a GP appointment online
 <span class="error-message" style="color: #c41d00;">Cannot be blank</span>
 </legend>
   <div class="form-group">
-    <input type="text" size="30" name="postcode" style="margin-bottom: 0; border:4px solid #ca3313;">
+    <input type="text" size="30" name="postcode" style="margin-bottom: 0; border:4px solid #000000;">
   </div>
 </fieldset>
 </div>
