--- a/app/views/expl_v7/book-an-appointment-no-text-entered-v4.html
+++ b/app/views/expl_v7/book-an-appointment-no-text-entered-v4.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout_2-3_no_title_block_with_2_3_warning.html' %}
+{% extends '_layouts/layout_2-3_no_title_block.html' %}
 
 
 {% block page_title %}
@@ -14,15 +14,8 @@ Book a GP appointment online
 
 {% endblock %}
 
-{% block pageWarning %}
-<p class="form-warning" tabindex="-1" style="font-weight: 600;">You need to enter your surgery name</p>
-
-{% endblock %}
-
 
 {% block content %}
-
-
 
 <form action="">
 
@@ -30,7 +23,7 @@ Book a GP appointment online
 <fieldset>
 <legend>
 <span class="form-label-bold" style="font-weight: 600; display:block;">What's the name of your GP surgery?</span>
-<span class="error-message" style="color: #c41d00;">Cannot be blank</span>
+<span class="error-message" style="color: #c41d00;">You need to enter your surgery name</span>
 </legend>
   <div class="form-group">
     <input type="text" size="30" name="postcode" style="margin-bottom: 0; border:4px solid #ca3313;">
