--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,12 @@
   <li><a href="/prod_v2/book-an-appointment">Book a GP Appointment Online 'start' screen</a> </li>
 </ul>
 
+<p><strong>Still to do</strong></p>
+<ul>
+  <li>Content review on all pages</li>
+  <li>Review design across browsers</li>
+  <li>Iterate results screen</li>
+</ul>
 
 <h3>MVP for Book an Appointment with a GP v1.1</h3>
 <ul>
