--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,9 +12,17 @@
 <h2>Production candidates</h2>
 
 <h3>v2 - simplest journey possible within current technical restraints</h3>
+
+<p><strong><a href="/prod_v2/book-an-appointment">Book a GP Appointment Online 'start' screen</a></strong></p>
+
+
+<p>Draws on explorations from:
+
 <ul>
-  <li><a href="/prod_v2/book-an-appointment">Book a GP Appointment Online 'start' screen</a> </li>
+  <li>v5 and v6 ('start page')</li>
+  <li>v7 ('warning pattern').</li>
 </ul>
+
 
 <p><strong>Still to do</strong></p>
 <ul>
@@ -24,15 +32,11 @@
 </ul>
 
 <h3>MVP for Book an Appointment with a GP v1.1</h3>
-<ul>
-  <li><a href="/prod_v1_1/">Index</a> </li>
-</ul>
+<p><strong><a href="/prod_v1_1/">Index</a></strong></p>
 
 
 <h3>MVP for Book an Appointment with a GP v1</h3>
-<ul>
-  <li><a href="/prod_v1/">Index</a> </li>
-</ul>
+<p><strong><a href="/prod_v1/">Index</a></strong></p>
 
 {% endblock %}
 
