--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,8 @@
 
 <h2>Production candidates</h2>
 
-<h3>v2 - simplest journey possible within current technical restraints</h3>
+<h3>v2<br />
+  simplest journey possible within current technical restraints</h3>
 
 <p><strong><a href="/prod_v2/book-an-appointment">Book a GP Appointment Online 'start' screen</a></strong></p>
 
@@ -40,11 +41,13 @@
   <li>Iterate results screen</li>
 </ul>
 
-<h3>MVP for Book an Appointment with a GP v1.1</h3>
+<h3>v1.1<br />
+  MVP for Book an Appointment with a GP</h3>
 <p><strong><a href="/prod_v1_1/">Index</a></strong></p>
 
 
-<h3>MVP for Book an Appointment with a GP v1</h3>
+<h3>v1<br />
+  MVP for Book an Appointment with a GP</h3>
 <p><strong><a href="/prod_v1/">Index</a></strong></p>
 
 <p>&nbsp;</p>
