priod_v2 content on reveal

--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -12,7 +12,7 @@ input[type='tel'] {
   width: 100%;
   margin: $leading 0 $leading*2 0;
   padding: $leading/2;
-  border: 3px solid $nhs-blue;
+  border: 3px solid $blue;
   font-family: inherit;
   font-size: inherit;
   font-weight: $bodyweight;
