--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -9,6 +9,7 @@ $blue: #0072c6;
 $red: #D81E05;
 
 $yellow: #F7E214;
+$warmyellow: #FFB81C;
 
 $button-green: #3E8117;
 $light-green: #5bbf21;
@@ -20,7 +21,7 @@ $pale-grey: #d9e1e2;
 $page-background: $pure-white;
 $text-colour: $black;
 $nhs-blue: $blue;
-$focus-colour: $yellow;
+$focus-colour: $warmyellow;
 $error-colour: $red;
 
 /*
@@ -81,3 +82,7 @@ $service-alert-primary: #fada88;
 $service-alert-secondary: $dark-blue;
 $callout-background: $yellow2;
 $callout-border: $yellow-dark;
+
+// Form elements
+
+$textbox-focus: #ffb81c;
