--- a/app/views/prod_v2/book-an-appointment.html
+++ b/app/views/prod_v2/book-an-appointment.html
@@ -26,7 +26,7 @@ Book a GP appointment online
 
 <details style="margin-top: 16px; margin-bottom: 32px;">
 
-<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">I haven't registered for online services</span></summary>
+<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">You haven't registered for online services</span></summary>
 
 <div class="info-panel">
   <p>Ask your surgery for an online services registration form. After you fill in the form, the surgery will send you a username and password.</p>
@@ -43,7 +43,7 @@ Book a GP appointment online
 </legend>
 <hint>We need to know this so we can take you to the right booking system.</hint>
   <div class="form-group">
-    <input type="text" size="30" name="postcode"  style="margin-bottom: 0;">
+    <input type="text" size="30" name="surgeryName"  style="margin-bottom: 0;">
   </div>
 </fieldset>
 
