priod_v2 content on reveal

--- a/app/views/prod_v2/book-an-appointment.html
+++ b/app/views/prod_v2/book-an-appointment.html
@@ -26,7 +26,7 @@ Book a GP appointment online
 
 <details style="margin-top: 16px; margin-bottom: 32px;">
 
-<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">You haven't registered for online services</span></summary>
+<summary style="color:#0072c6;"><span class="nearest_opening_times" style="text-decoration: underline;">If you haven't registered for online services</span></summary>
 
 <div class="info-panel">
   <p>Ask your surgery for an online services registration form. After you fill in the form, the surgery will send you a username and password.</p>
