--- a/app/views/_layouts/layout_index.html
+++ b/app/views/_layouts/layout_index.html
@@ -37,12 +37,12 @@
 
 
     <div class="grid-row">
-      <div class="grid-1-2">
-      {% block leftcontent %}{% endblock %}
+      <div class="grid-2-3">
+      {% block leftContent %}{% endblock %}
       </div>
 
-      <div class="grid-1-2">
-      {% block rightcontent %}{% endblock %}
+      <div class="grid-1-3">
+      {% block rightContent %}{% endblock %}
       </div>
 
 
