--- a/app/views/prod_v2/book-an-appointment-list-of-gps.html
+++ b/app/views/prod_v2/book-an-appointment-list-of-gps.html
@@ -7,7 +7,7 @@ Stomach ache symptoms and conditions - NHS.UK
 
 
 {% block pageTitle %}
-Choose your surgery
+Select your surgery
 {% endblock %}
 
 
